[0.2.0b+SVN]
* Updated to the last database structure. <Nostradamus>
* Critical security bug fixed. <Nostradamus/fightingelf>
* Bugfixes. <Nostradamus>

[0.2.0+SVN]
* Dropped 0.0.x and 0.1.x deprecations. <wrzasq>
* Dropped PHP 5.0 support. <wrzasq>
* Made POT class static. <wrzasq>
* More strictive cache drivers interface. <wrzasq>
* Updated for new database structure. <wrzasq>
* Deaths list support. <wrzasq>
* Fixed loading instants in player spells. <wrzasq>
* Fixed name magic property setting in account. <wrzasq>
* Lots of bugs reported by Junkfood fixed. <wrzasq>

[0.1.6]
* Support for new player properties. <wrzasq>
* Schema info support. <wrzasq>
* Updated OTAdmin client (server saving and opening). <wrzasq>
* Updated binay format support. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.5]
* Updated for new (avesta branch) database structure. <wrzasq>
* Dropped automatic account blocking. <wrzasq>
* Accounts are now created by names, using OTS_Account::createNamed() method. <wrzasq>
* OTS_SpellsList implements now IteratorAggregate and Countable interfaces. <wrzasq>
* Code optimalisation. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.4]
* Updated for last database changes. <wrzasq>
* Updated OTAdmin implementation. <wrzasq>
* Binary information protocol support. <wrzasq>
* Server status routines grouped. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.3]
* Updated documentation. <wrzasq>
* VIP list support. <wrzasq>
* Bans lists. <wrzasq>
* PHK and PHAR packages. <wrzasq>
* Separated make targets for POT package and it's documentation. <wrzasq>
* More stricted parameters and results types. <wrzasq>
* Added display driver interface for non-database resources. <wrzasq>
* Added existence checking methods. <wrzasq>
* Added __get() and __set() methods to OTS_Admin. <wrzasq>
* PDO connection is now set to throw exceptions on SQL errors instead of silence them. <wrzasq>
* Code optimalisation. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.2]
* OTAdmin protocol support. <wrzasq>